# tinyloop

./: .gitignore  Makefile  README.md  WARNINGS_SOLUTION.md  pyproject.toml  run_integration_tests.py
notebooks/: basic_usage.ipynb  modules.ipynb
src/tinyloop/: __init__.py
tests/: README.md  test_integration_litellm.py  test_vision.py
tinyloop/: types.py
tinyloop/features/: function_calling.py
tinyloop/functionality/: __init__.py  function_calling.py
tinyloop/inference/: litellm.py
tinyloop/modules/: tool_loop.py
tinyloop/utils/: mlflow.py
